--- a/second.html
+++ b/second.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="https://shinnosukesatoh.github.io/testsite/src/stylesheet.css">
     -->
     <link rel="stylesheet" href="src/stylesheet.css">
+    <title>Shinnosuke Satoh | 佐藤晋之祐</title>
 
 
 
@@ -73,10 +74,14 @@
                         <p lang="en">
                             Hi, I'm Shinnosuke Satoh. Call me Shin!</p>
                         <p lang="en">
-                            Since joining Planetary Plasma and Atmospheric Research Center (PPARC) at Tohoku University
-                            in 2021, I have been working on studies about one of the jovian icy moons, Europa. My main
-                            target is the energy transportation to Europa through the moon-plasma interaction and the
-                            consequent physics such as the aurorae on Europa's sputtering-generated oxygen atmosphere. I
+                            Since joining Planetary Plasma and Atmospheric Research Center (PPARC) at Tohoku
+                            University
+                            in 2021, I have been working on studies about one of the jovian icy moons, Europa. My
+                            main
+                            target is the energy transportation to Europa through the moon-plasma interaction and
+                            the
+                            consequent physics such as the aurorae on Europa's sputtering-generated oxygen
+                            atmosphere. I
                             received a B.S. of Geophysics (2022) together with Tohoku University President Award
                             (2022).
                         </p>
@@ -85,7 +90,8 @@
                             University.
                         </p>
                         <p lang="en">
-                            I was awarded in a national English composition contest for high school student in Japan for
+                            I was awarded in a national English composition contest for high school student in Japan
+                            for
                             three years in a row.
                         </p>
                         <p lang="en"><a
@@ -202,30 +208,43 @@
                             </a></p>
                     </div>
                 </div>
-            </div> <!-- row -->
+            </div>
+        </div> <!-- row -->
 
+        <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-md-12 col-lg-4">
                     <div class="box">
-                        <h1 lang="en">South Ferry</h1>
-                        <div class="subwaywrap">
-                            <div class="subway">
-                                <span class="subway1">M</span>
-                                <span class="subway1">A</span>
-                                <span class="subway1">Y</span>
-                                <span class="subway1">2</span>
-                                <span class="subway1">3</span>
-                            </div>
-                        </div>
-                        いろはにへとちりぬるを
+                        <h1 lang="en">Brief Bio</h1>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="box">
                         <p lang="en">
-                            This feature is usually enabled by default and causes certain characters to adjust
-                            themselves or be
-                            replaced depending on the surrounding context.
-                            Fixed-width numbers are useful for tabular data, where comparing columns across rows is
-                            desired.
-                            The quick brown fox jumps over the lazy dog. Almost before we knew it, we had left the
-                            ground.
+                            Hi, I'm Shinnosuke Satoh. Call me Shin!</p>
+                        <p lang="en">
+                            Since joining Planetary Plasma and Atmospheric Research Center (PPARC) at Tohoku
+                            University
+                            in 2021, I have been working on studies about one of the jovian icy moons, Europa.
+                            My
+                            main
+                            target is the energy transportation to Europa through the moon-plasma interaction
+                            and
+                            the
+                            consequent physics such as the aurorae on Europa's sputtering-generated oxygen
+                            atmosphere. I
+                            received a B.S. of Geophysics (2022) together with Tohoku University President Award
+                            (2022).
+                        </p>
+                        <p lang="en">
+                            I'm now working towards master's degree at Graduate School of Science, Tohoku
+                            University.
+                        </p>
+                        <p lang="en">
+                            I was awarded in a national English composition contest for high school student in
+                            Japan
+                            for
+                            three years in a row.
                         </p>
                         <p lang="en"><a
                                 href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
@@ -234,96 +253,133 @@
                             </a></p>
                     </div>
                 </div>
-                <div class="col-lg-6">
-                    <div class="box">
-                        <h1 lang="en">Queens&shy;boro Plaza</h1>
-                        <div class="subwaywrap">
-                            <div class="subway">
-                                <span class="subway1">M</span>
-                                <span class="subway1">A</span>
-                                <span class="subway1">Y</span>
-                                <span class="subway1">2</span>
-                                <span class="subway1">3</span>
-                            </div>
-                        </div>
-                        <p lang="en">
-                            This feature is usually enabled by default and causes certain characters to adjust
-                            themselves or be
-                            replaced depending on the surrounding context.
-                            Fixed-width numbers are useful for tabular data, where comparing columns across rows is
-                            desired.
-                            The quick brown fox jumps over the lazy dog. Almost before we knew it, we had left the
-                            ground.
-                        </p>
-                        <p lang="en"><a
-                                href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
-                                class="border_slide_btn1">
-                                Learn More
-                            </a></p>
-                    </div>
-                </div>
-            </div> <!-- row -->
-
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="box">
-                        <h1 lang="en">Court Square</h1>
-                        <div class="subwaywrap">
-                            <div class="subway">
-                                <span class="subway1">M</span>
-                                <span class="subway1">A</span>
-                                <span class="subway1">Y</span>
-                                <span class="subway1">2</span>
-                                <span class="subway1">3</span>
-                            </div>
-                        </div>
-                        <p lang="en">
-                            This feature is usually enabled by default and causes certain characters to adjust
-                            themselves or be
-                            replaced depending on the surrounding context.
-                            Fixed-width numbers are useful for tabular data, where comparing columns across rows is
-                            desired.
-                            The quick brown fox jumps over the lazy dog. Almost before we knew it, we had left the
-                            ground.
-                        </p>
-                        <p lang="en"><a
-                                href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
-                                class="border_slide_btn1">
-                                Learn More
-                            </a></p>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="box">
-                        <h1 lang="en">Broadway</h1>
-                        <div class="subwaywrap">
-                            <div class="subway">
-                                <span class="subway1">M</span>
-                                <span class="subway1">A</span>
-                                <span class="subway1">Y</span>
-                                <span class="subway1">2</span>
-                                <span class="subway1">3</span>
-                            </div>
-                        </div>
-                        <p lang="en">
-                            This feature is usually enabled by default and causes certain characters to adjust
-                            themselves or be
-                            replaced depending on the surrounding context.
-                            Fixed-width numbers are useful for tabular data, where comparing columns across rows is
-                            desired.
-                            The quick brown fox jumps over the lazy dog. Almost before we knew it, we had left the
-                            ground.
-                        </p>
-                        <p lang="en"><a
-                                href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
-                                class="border_slide_btn1">
-                                Learn More
-                            </a></p>
-                    </div>
-                </div>
-            </div> <!-- row -->
+            </div>
         </div>
-        <!--　▲ 3カラム　 -->
+    </div>
+    </div> <!-- row -->
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="box">
+                    <h1 lang="en">South Ferry</h1>
+                    <div class="subwaywrap">
+                        <div class="subway">
+                            <span class="subway1">M</span>
+                            <span class="subway1">A</span>
+                            <span class="subway1">Y</span>
+                            <span class="subway1">2</span>
+                            <span class="subway1">3</span>
+                        </div>
+                    </div>
+                    いろはにへとちりぬるを
+                    <p lang="en">
+                        This feature is usually enabled by default and causes certain characters to adjust
+                        themselves or be
+                        replaced depending on the surrounding context.
+                        Fixed-width numbers are useful for tabular data, where comparing columns across rows is
+                        desired.
+                        The quick brown fox jumps over the lazy dog. Almost before we knew it, we had left the
+                        ground.
+                    </p>
+                    <p lang="en"><a
+                            href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
+                            class="border_slide_btn1">
+                            Learn More
+                        </a></p>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="box">
+                    <h1 lang="en">Queens&shy;boro Plaza</h1>
+                    <div class="subwaywrap">
+                        <div class="subway">
+                            <span class="subway1">M</span>
+                            <span class="subway1">A</span>
+                            <span class="subway1">Y</span>
+                            <span class="subway1">2</span>
+                            <span class="subway1">3</span>
+                        </div>
+                    </div>
+                    <p lang="en">
+                        This feature is usually enabled by default and causes certain characters to adjust
+                        themselves or be
+                        replaced depending on the surrounding context.
+                        Fixed-width numbers are useful for tabular data, where comparing columns across rows is
+                        desired.
+                        The quick brown fox jumps over the lazy dog. Almost before we knew it, we had left the
+                        ground.
+                    </p>
+                    <p lang="en"><a
+                            href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
+                            class="border_slide_btn1">
+                            Learn More
+                        </a></p>
+                </div>
+            </div>
+        </div> <!-- row -->
+
+        <div class="row">
+            <div class="col-lg-6">
+                <div class="box">
+                    <h1 lang="en">Court Square</h1>
+                    <div class="subwaywrap">
+                        <div class="subway">
+                            <span class="subway1">M</span>
+                            <span class="subway1">A</span>
+                            <span class="subway1">Y</span>
+                            <span class="subway1">2</span>
+                            <span class="subway1">3</span>
+                        </div>
+                    </div>
+                    <p lang="en">
+                        This feature is usually enabled by default and causes certain characters to adjust
+                        themselves or be
+                        replaced depending on the surrounding context.
+                        Fixed-width numbers are useful for tabular data, where comparing columns across rows is
+                        desired.
+                        The quick brown fox jumps over the lazy dog. Almost before we knew it, we had left the
+                        ground.
+                    </p>
+                    <p lang="en"><a
+                            href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
+                            class="border_slide_btn1">
+                            Learn More
+                        </a></p>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="box">
+                    <h1 lang="en">Broadway</h1>
+                    <div class="subwaywrap">
+                        <div class="subway">
+                            <span class="subway1">M</span>
+                            <span class="subway1">A</span>
+                            <span class="subway1">Y</span>
+                            <span class="subway1">2</span>
+                            <span class="subway1">3</span>
+                        </div>
+                    </div>
+                    <p lang="en">
+                        This feature is usually enabled by default and causes certain characters to adjust
+                        themselves or be
+                        replaced depending on the surrounding context.
+                        Fixed-width numbers are useful for tabular data, where comparing columns across rows is
+                        desired.
+                        The quick brown fox jumps over the lazy dog. Almost before we knew it, we had left the
+                        ground.
+                    </p>
+                    <p lang="en"><a
+                            href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
+                            class="border_slide_btn1">
+                            Learn More
+                        </a></p>
+                </div>
+            </div>
+        </div> <!-- row -->
+    </div>
+    </div>
+    <!--　▲ 3カラム　 -->
     </div>
     <div class="site-footer">
         <!--▼ロゴ中央寄せ-->
