--- a/second.html
+++ b/second.html
@@ -19,7 +19,6 @@
     <title>Shinnosuke Satoh | 佐藤晋之祐</title>
 
 
-
 </head>
 
 <body>
@@ -30,362 +29,36 @@
         </div>
         <!--▲ロゴ中央寄せ-->
     </div>
-    <div class="contents">
-        <!--▼ジャンボトロン-->
-        <div class="jumbotron">
-            <div class="jmb0wrap">
-                <div class="container">
-                    <p class="jmb1">
-                        Hello, I'm Shin.<br>Welcome to my page!
-                    </p>
-                    <p class="jmb1btn">
-                        Planetary Plasma and Atmospheric Research Center,<br>Tohoku University
-                    </p>
 
-                    <div id="page-link">
-                        <p class="jmb1btn"><a href="#area-1" class="border_slide_btn0">Learn More</a></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!--▲ジャンボトロン-->
-        <!--　▼ 3カラム　 -->
-        <div class="container">
-            <section id="area-1">
-            </section>
-            <h2>
-                <p class="text-center">About me
+    <main class="wrap">
+        <section class="section">
+            <div class="container">
+                <p class="jmb1">
+                    Hello, I'm Shin.<br>Welcome to my page!
                 </p>
-            </h2>
-            <div class="image_circle"></div>
-            <div class="row">
-                <div class="col-12">
-                    <div class="box">
-                        <h1 lang="en">Brief Bio</h1>
-                        <div class="subwaywrap">
-                            <div class="subway">
-                                <span class="subway1">M</span>
-                                <span class="subway1">A</span>
-                                <span class="subway1">Y</span>
-                                <span class="subway1">2</span>
-                                <span class="subway1">3</span>
-                            </div>
-                        </div>
-                        <p lang="en">
-                            Hi, I'm Shinnosuke Satoh. Call me Shin!</p>
-                        <p lang="en">
-                            Since joining Planetary Plasma and Atmospheric Research Center (PPARC) at Tohoku
-                            University
-                            in 2021, I have been working on studies about one of the jovian icy moons, Europa. My
-                            main
-                            target is the energy transportation to Europa through the moon-plasma interaction and
-                            the
-                            consequent physics such as the aurorae on Europa's sputtering-generated oxygen
-                            atmosphere. I
-                            received a B.S. of Geophysics (2022) together with Tohoku University President Award
-                            (2022).
-                        </p>
-                        <p lang="en">
-                            I'm now working towards master's degree at Graduate School of Science, Tohoku
-                            University.
-                        </p>
-                        <p lang="en">
-                            I was awarded in a national English composition contest for high school student in Japan
-                            for
-                            three years in a row.
-                        </p>
-                        <p lang="en"><a
-                                href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/exec?p=page1"
-                                class="border_slide_btn1">
-                                Read More on Page 1
-                            </a></p>
-                    </div>
-                </div>
-            </div> <!-- row -->
+                <p class="jmb1btn">
+                    Planetary Plasma and Atmospheric Research Center,<br>Tohoku University
+                </p>
 
-            <div class="row">
-                <div class="col-sm-12 col-md-12 col-lg-6">
-                    <div class="box">
-                        <h1 lang="en">Research Interests</h1>
-                        <div class="subwaywrap">
-                            <div class="subway">
-                                <span class="subway1">M</span>
-                                <span class="subway1">A</span>
-                                <span class="subway1">Y</span>
-                                <span class="subway1">2</span>
-                                <span class="subway1">3</span>
-                            </div>
-                        </div>
-                        <p lang="en">
-                            Geophysics, and planetary physics. Icy planets and moons. Moon-plasma interaction. Planetary
-                            magnetic fields, planetary magnetospheres.
-                        </p>
-                        <p lang="en"><a
-                                href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
-                                class="border_slide_btn1">
-                                Learn More
-                            </a></p>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="box">
-                        <h1 lang="en">Education</h1>
-                        <div class="subwaywrap">
-                            <div class="subway">
-                                <span class="subway1">M</span>
-                                <span class="subway1">A</span>
-                                <span class="subway1">Y</span>
-                                <span class="subway1">2</span>
-                                <span class="subway1">3</span>
-                            </div>
-                        </div>
-                        <p lang="en">
-                            <li>2018 - Atsugi High School, Kanagawa, Japan</li>
-                            <li>2022 - B.S., Geophysics, Tohoku University, Miyagi, Japan</li>
-                        </p>
-                        <p lang="en"><a
-                                href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
-                                class="border_slide_btn1">
-                                Learn More
-                            </a></p>
-                    </div>
-                </div>
-            </div> <!-- row -->
-
-            <div class="row">
-                <div class="col-md-12 col-lg">
-                    <div class="box">
-                        <h1 lang="en">Awards</h1>
-                        <div class="subwaywrap">
-                            <div class="subway">
-                                <span class="subway1">M</span>
-                                <span class="subway1">A</span>
-                                <span class="subway1">Y</span>
-                                <span class="subway1">2</span>
-                                <span class="subway1">3</span>
-                            </div>
-                        </div>
-                        <p lang="en">
-                            <li>2015 - 全英連 第54回全国高等学校生徒英作文コンテスト 優良賞</li>
-                            <li>2016 - 全英連 第55回全国高等学校生徒英作文コンテスト 入選</li>
-                            <li>2017 - 全英連 第56回全国高等学校生徒英作文コンテスト 入選</li>
-                            <li>2021 - 東北大学 青葉理学振興会 令和2年度 青葉理学振興会奨励賞 (Aoba Society for the Promotion of Science Award)
-                            </li>
-                            <li>2022 - 東北大学 総長賞 (Tohoku University President Award)</li>
-                        </p>
-                        <p lang="en"><a
-                                href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
-                                class="border_slide_btn1">
-                                Learn More
-                            </a></p>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="box">
-                        <h1 lang="en">Special Experiences</h1>
-                        <div class="subwaywrap">
-                            <div class="subway">
-                                <span class="subway1">M</span>
-                                <span class="subway1">A</span>
-                                <span class="subway1">Y</span>
-                                <span class="subway1">2</span>
-                                <span class="subway1">3</span>
-                            </div>
-                        </div>
-                        <p lang="jp">
-                            <li>2021 - 学都「仙台・宮城」サイエンス・デイ2021 に東北大学大学院理学研究科太陽惑星空間系領域として出展</li>
-                            <li>2021 - サイエンス・デイ オブ ザ イヤー2021 文部科学大臣賞 を東北大学大学院理学研究科太陽惑星空間系領域として受賞</li>
-                            <li>2022 - 令和4年3月東北大学 学士学位記授与式 卒業生副総代</li>
-                            <li>2022 - 東北大学理学部案内2023に寄稿</li>
-                            <li>2022 - 東北大学大学院理学研究科 地球物理学専攻 オープンキャンパス2022</li>
-                            <li>2022 - 仙台市天文台×東北大学大学院理学研究科公開サイエンス講座 2022年度第1回「ワクワク惑星探査 ～行け行け僕らの火星ローバー！～」を運営 (report)
-                            </li>
-                        </p>
-                        <p lang="en"><a
-                                href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
-                                class="border_slide_btn1">
-                                Learn More
-                            </a></p>
-                    </div>
+                <div id="page-link">
+                    <p class="jmb1btn"><a href="#area-1" class="border_slide_btn0">Learn More</a></p>
                 </div>
             </div>
-        </div> <!-- row -->
-
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 col-lg-4">
-                    <div class="box">
-                        <h1 lang="en">Brief Bio</h1>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="box">
-                        <p lang="en">
-                            Hi, I'm Shinnosuke Satoh. Call me Shin!</p>
-                        <p lang="en">
-                            Since joining Planetary Plasma and Atmospheric Research Center (PPARC) at Tohoku
-                            University
-                            in 2021, I have been working on studies about one of the jovian icy moons, Europa.
-                            My
-                            main
-                            target is the energy transportation to Europa through the moon-plasma interaction
-                            and
-                            the
-                            consequent physics such as the aurorae on Europa's sputtering-generated oxygen
-                            atmosphere. I
-                            received a B.S. of Geophysics (2022) together with Tohoku University President Award
-                            (2022).
-                        </p>
-                        <p lang="en">
-                            I'm now working towards master's degree at Graduate School of Science, Tohoku
-                            University.
-                        </p>
-                        <p lang="en">
-                            I was awarded in a national English composition contest for high school student in
-                            Japan
-                            for
-                            three years in a row.
-                        </p>
-                        <p lang="en"><a
-                                href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
-                                class="border_slide_btn1">
-                                Learn More
-                            </a></p>
-                    </div>
-                </div>
+        </section>
+        <section class="section">
+            <p>Section 02</p>
+        </section>
+        <section class="section">
+            <p>Section 03</p>
+        </section>
+        <section class="section">
+            <div class="site-footer">
+                <!--▼ロゴ中央寄せ-->
+                <p>© 2022 Shinnosuke Satoh, Tohoku University, Japan</p>
+                <!--▲ロゴ中央寄せ-->
             </div>
-        </div>
-    </div>
-    </div> <!-- row -->
-
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="box">
-                    <h1 lang="en">South Ferry</h1>
-                    <div class="subwaywrap">
-                        <div class="subway">
-                            <span class="subway1">M</span>
-                            <span class="subway1">A</span>
-                            <span class="subway1">Y</span>
-                            <span class="subway1">2</span>
-                            <span class="subway1">3</span>
-                        </div>
-                    </div>
-                    いろはにへとちりぬるを
-                    <p lang="en">
-                        This feature is usually enabled by default and causes certain characters to adjust
-                        themselves or be
-                        replaced depending on the surrounding context.
-                        Fixed-width numbers are useful for tabular data, where comparing columns across rows is
-                        desired.
-                        The quick brown fox jumps over the lazy dog. Almost before we knew it, we had left the
-                        ground.
-                    </p>
-                    <p lang="en"><a
-                            href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
-                            class="border_slide_btn1">
-                            Learn More
-                        </a></p>
-                </div>
-            </div>
-            <div class="col-lg-6">
-                <div class="box">
-                    <h1 lang="en">Queens&shy;boro Plaza</h1>
-                    <div class="subwaywrap">
-                        <div class="subway">
-                            <span class="subway1">M</span>
-                            <span class="subway1">A</span>
-                            <span class="subway1">Y</span>
-                            <span class="subway1">2</span>
-                            <span class="subway1">3</span>
-                        </div>
-                    </div>
-                    <p lang="en">
-                        This feature is usually enabled by default and causes certain characters to adjust
-                        themselves or be
-                        replaced depending on the surrounding context.
-                        Fixed-width numbers are useful for tabular data, where comparing columns across rows is
-                        desired.
-                        The quick brown fox jumps over the lazy dog. Almost before we knew it, we had left the
-                        ground.
-                    </p>
-                    <p lang="en"><a
-                            href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
-                            class="border_slide_btn1">
-                            Learn More
-                        </a></p>
-                </div>
-            </div>
-        </div> <!-- row -->
-
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="box">
-                    <h1 lang="en">Court Square</h1>
-                    <div class="subwaywrap">
-                        <div class="subway">
-                            <span class="subway1">M</span>
-                            <span class="subway1">A</span>
-                            <span class="subway1">Y</span>
-                            <span class="subway1">2</span>
-                            <span class="subway1">3</span>
-                        </div>
-                    </div>
-                    <p lang="en">
-                        This feature is usually enabled by default and causes certain characters to adjust
-                        themselves or be
-                        replaced depending on the surrounding context.
-                        Fixed-width numbers are useful for tabular data, where comparing columns across rows is
-                        desired.
-                        The quick brown fox jumps over the lazy dog. Almost before we knew it, we had left the
-                        ground.
-                    </p>
-                    <p lang="en"><a
-                            href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
-                            class="border_slide_btn1">
-                            Learn More
-                        </a></p>
-                </div>
-            </div>
-            <div class="col-lg-6">
-                <div class="box">
-                    <h1 lang="en">Broadway</h1>
-                    <div class="subwaywrap">
-                        <div class="subway">
-                            <span class="subway1">M</span>
-                            <span class="subway1">A</span>
-                            <span class="subway1">Y</span>
-                            <span class="subway1">2</span>
-                            <span class="subway1">3</span>
-                        </div>
-                    </div>
-                    <p lang="en">
-                        This feature is usually enabled by default and causes certain characters to adjust
-                        themselves or be
-                        replaced depending on the surrounding context.
-                        Fixed-width numbers are useful for tabular data, where comparing columns across rows is
-                        desired.
-                        The quick brown fox jumps over the lazy dog. Almost before we knew it, we had left the
-                        ground.
-                    </p>
-                    <p lang="en"><a
-                            href="https://script.google.com/a/dc.tohoku.ac.jp/macros/s/AKfycbx4OmZ8rwv70Hb_brYzrip01lbXoWU7u1dOPPqr0Lli/dev"
-                            class="border_slide_btn1">
-                            Learn More
-                        </a></p>
-                </div>
-            </div>
-        </div> <!-- row -->
-    </div>
-    </div>
-    <!--　▲ 3カラム　 -->
-    </div>
-    <div class="site-footer">
-        <!--▼ロゴ中央寄せ-->
-        <p>© 2022 Shinnosuke Satoh, Tohoku University, Japan</p>
-        <!--▲ロゴ中央寄せ-->
-    </div>
+        </section>
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
