--- a/second.html
+++ b/second.html
@@ -40,9 +40,7 @@
                     Planetary Plasma and Atmospheric Research Center,<br>Tohoku University
                 </p>
 
-                <div id="page-link">
-                    <p class="jmb1btn"><a href="#area-1" class="border_slide_btn0">Learn More</a></p>
-                </div>
+                <p class="jmb1btn"><a href="#area-1" class="border_slide_btn0">Learn More</a></p>
             </div>
         </section>
         <section class="section">
@@ -51,10 +49,10 @@
         <section class="section">
             <p>Section 03</p>
         </section>
-        <section class="section">
+        <section iclass="section">
             <div class="site-footer">
                 <!--▼ロゴ中央寄せ-->
-                <p>© 2022 Shinnosuke Satoh, Tohoku University, Japan</p>
+                <p id="area-1">© 2022 Shinnosuke Satoh, Tohoku University, Japan</p>
                 <!--▲ロゴ中央寄せ-->
             </div>
         </section>
