--- a/second.html
+++ b/second.html
@@ -49,7 +49,7 @@
         <section class="section">
             <p>Section 03</p>
         </section>
-        <section iclass="section">
+        <section class="section">
             <div class="site-footer">
                 <!--▼ロゴ中央寄せ-->
                 <p id="area-1">© 2022 Shinnosuke Satoh, Tohoku University, Japan</p>
