--- a/second.html
+++ b/second.html
@@ -44,7 +44,14 @@
             </div>
         </section>
         <section class="section">
-            <p>Section 02</p>
+            <div class="container">
+                <p class="jmb2">
+                    Brief Bio
+                </p>
+                <p class="jmb2btn">
+                    Scroll down to show more
+                </p>
+            </div>
         </section>
         <section class="section">
             <p>Section 03</p>
