--- a/second.html
+++ b/second.html
@@ -54,7 +54,37 @@
             </div>
         </section>
         <section class="section">
-            <p>Section 03</p>
+            <div class="container">
+                <p lang="en">
+                    Hi, I'm Shinnosuke Satoh. Call me Shin!</p>
+                <p lang="en">
+                    Since joining Planetary Plasma and Atmospheric Research Center (PPARC) at Tohoku
+                    University
+                    in 2021, I have been working on studies about one of the jovian icy moons, Europa.
+                    My
+                    main
+                    target is the energy transportation to Europa through the moon-plasma interaction
+                    and
+                    the
+                    consequent physics such as the aurorae on Europa's sputtering-generated oxygen
+                    atmosphere. I
+                    received a B.S. of Geophysics (2022) together with Tohoku University President Award
+                    (2022).
+                </p>
+                <p lang="en">
+                    I'm now working towards master's degree at Graduate School of Science, Tohoku
+                    University.
+                </p>
+                <p lang="en">
+                    I was awarded in a national English composition contest for high school student in
+                    Japan
+                    for
+                    three years in a row.
+                </p>
+            </div>
+        </section>
+        <section class="section">
+            <p>Section 04</p>
         </section>
         <section class="section">
             <div class="site-footer">
